--- a/Love Story/index.html
+++ b/Love Story/index.html
@@ -20,7 +20,7 @@
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	
 	<!-- Title -->
-	<title>Vy Nghĩa ❤ Trọng Nghĩa</title>
+	<title>Trọng Phát ❤ Cẩm Nhung</title>
 	
 	<!-- Default CSS -->
 	<link rel="stylesheet" href="css/all.css">
@@ -38,11 +38,11 @@
 	<div class="flowtime">
 		<div class="ft-section section-1" data-id="section-1">
 			<div id="/section-1/page-1" class="ft-page page-1" data-id="page-1">
-				<p class="text1"><span id="text-75" >Vy Nghĩa</span> ❤ <span id="text-76" >Trọng Nghĩa</span> </p>
-				<p class="text2">Nhấn phím "↓" <span id="text-78" >từ từ để trải nghiệm</span></p>
+				<p class="text1"><span id="text-75" >Trọng Phát</span> ❤ <span id="text-76" >Cẩm Nhung</span> </p>
+				<p class="text2">Nhấn phím "↓" <span id="text-78" >từ từ để trải nghiệm nhé</span></p>
 			</div>
 			<div id="/section-1/page-2" class="ft-page page-2" data-id="page-2">
-				<p class="top-text" id="text-1" >Khi thiếu bóng dáng em, trong tim anh trống rỗng.</p>
+				<p class="top-text" id="text-1" >Khi thiếu bóng dáng em, trái tim anh trống rỗng...</p>
 				<img src='img/iali63.jpg' />
 			</div>
 			<div id="/section-1/page-3" class="ft-page page-3 left-img" data-id="page-3">
@@ -116,7 +116,7 @@
 				<img src='img/iali11.jpg'  />
 			</div>
 			<div id="/section-4/page-2" class="ft-page page-19" data-id="page-2">
-				<h3 id="text-21" >Anh thích em rồi？</h3>
+				<h3 id="text-21" >Anh yêu em</h3>
 				<img src="img/iali75.jpg" />
 			</div>
 			<div id="/section-4/page-3" class="ft-page page-20" data-id="page-3">
@@ -212,7 +212,7 @@
 			<div id="/section-7/page-3" class="ft-page page-41" data-id="page-3">
 				<img src='img/iali30_1.jpg' class='img1'/>
 				<img src='img/iali30_2.jpg' class='img2'/>
-				<h3 id="text-46" >... anh không thể bay cao và xa hơn!</h3>
+				<h3 id="text-46" >... con đường trở nên dài và xa hơn</h3>
 			</div>
 			<div id="/section-7/page-4" class="ft-page page-42" data-id="page-4">
 				<h3><span id="text-47" >Anh xin lỗi! Anh sẽ thay đổi</span><br /><span id="text-48" >Chắc chắn sẽ như một hình tượng mà em muốn!</span></h3>
@@ -220,7 +220,7 @@
 			</div>
 			<div id="/section-7/page-5" class="ft-page page-43" data-id="page-5">
 				<img src='img/iali42.jpg' />
-				<h3 id="text-49" >Hãy tin anh... vì anh là cung bò cạp... à không Sư tử...=))</h3>
+				<h3 id="text-49" >Hãy tin anh... vì anh là cung bò cạp... à không là Song ngư...=))</h3>
 			</div>
 			<div id="/section-7/page-6" class="ft-page page-44 left-img" data-id="page-6">
 				<h3><span id="text-50" >Nằm xuống! Nhắm mắt lại...</span><br /><span id="text-51" >chầm chậm suy nghĩ~</span></h3>
@@ -268,10 +268,10 @@
 			</div>
 			<div id="/section-8/page-6" class="ft-page page-51" data-id="page-6">
 				<p>
-					<span id="text-67" >Trọng Nghĩa: Vĩnh cửu là như thế nào!</span><br />
-					<span id="text-68" >Vy Nghĩa: sẽ không thay đổi</span><br />
-					<span id="text-69" >Trọng Nghĩa: Nó ở đâu?</span><br />
-					<span id="text-70" >Vy Nghĩa: Ở trong tim em ❤</span>
+					<span id="text-67" >Cẩm Nhung: Vĩnh cửu là như thế nào!</span><br />
+					<span id="text-68" >Trọng Phát: sẽ không thay đổi</span><br />
+					<span id="text-69" >Cẩm Nhung: Nó ở đâu?</span><br />
+					<span id="text-70" >Trọng Phát: Ở trong tim em ❤</span>
 					</p>
 			</div>
 		</div>
@@ -282,7 +282,7 @@
 			</div>
 			<div id="/section-9/page-2" class="ft-page page-53" data-id="page-2">
 				<img src='img/iali68.jpg' alt='happy birthday' />
-				<h3 id="text-72" >Happy Valentine Day's</h3>
+				<h3 id="text-72" >Happy Special Day!!</h3>
 			</div>
 			<div id="/section-9/page-3" class="ft-page page-54 center-img" data-id="page-3" >
 				<div class="center-img">I love you</div>
@@ -290,8 +290,8 @@
 			<div id="/section-9/page-4" class="ft-page page-55 right-img" data-id="page-4">
 				<img src='img/14915.jpg' />
 				<p class="text">
-					<span id="text-73" >Vy Nghĩa và Trọng Nghĩa là Gay!</span><br />
-					<span id="text-74" >Chúng tôi đã yêu được hơn 3 năm!</span><br />
+					<span id="text-73" >Trọng Phát ❤ Cẩm Nhung </span><br />
+					<span id="text-74" >Chúng ta đã yêu được hơn 5 năm!</span><br />
 					<br />
 					<br />
 					
@@ -303,7 +303,7 @@
 	</div>
 
 	<!-- Audio/Music -->
-	<audio id="bgmMusic" src="music/saveme.mp3" autoplay="autoplay" loop preload="auto" type="audio/mp3"></audio>
+	<audio id="bgmMusic" src="music/I Do.mp3" autoplay="autoplay" loop preload="auto" type="audio/mp3"></audio>
     <div class="mPower"><span id="on" title="Tắt nhạc"></span><span id="off" title="Mở nhạc"></span></div>
 
 	<!-- Library Script -->
