--- a/Love Story/index.html
+++ b/Love Story/index.html
@@ -36,6 +36,7 @@
 	
 	<!-- Love -->
 	<div class="flowtime">
+		
 		<div class="ft-section section-1" data-id="section-1">
 			<div id="/section-1/page-1" class="ft-page page-1" data-id="page-1">
 				<p class="text1"><span id="text-75" >Trọng Phát</span> ❤ <span id="text-76" >Cẩm Nhung</span> </p>
@@ -219,7 +220,7 @@
 				<img src='img/iali69.jpg'  />
 			</div>
 			<div id="/section-7/page-5" class="ft-page page-43" data-id="page-5">
-				<img src='img/iali42.jpg' />
+				<img src='img/song-ngu.jpg' />
 				<h3 id="text-49" >Hãy tin anh... vì anh là cung bò cạp... à không là Song ngư...=))</h3>
 			</div>
 			<div id="/section-7/page-6" class="ft-page page-44 left-img" data-id="page-6">
@@ -303,7 +304,7 @@
 	</div>
 
 	<!-- Audio/Music -->
-	<audio id="bgmMusic" src="music/I Do.mp3" autoplay="autoplay" loop preload="auto" type="audio/mp3"></audio>
+	<audio id="bgmMusic" src="music/I_Do.mp3" autoplay="autoplay" loop preload="auto" type="audio/mp3"></audio>
     <div class="mPower"><span id="on" title="Tắt nhạc"></span><span id="off" title="Mở nhạc"></span></div>
 
 	<!-- Library Script -->
